--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'net.minecraftforge.gradle.liteloader'
 apply plugin: 'org.spongepowered.mixin'
 
 group = 'com.minelittlepony'
-version = '1.12_0'
+version = '1.12.0.1'
 description = 'Mine Little Pony'
 
 targetCompatibility = 1.8
