--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ sourceCompatibility = 1.8
 
 minecraft {
     version = "1.12.2"
-    mappings = 'snapshot_20170919'
+    mappings = 'stable_39'
     runDir = 'run'
     replace '@VERSION@', project.version
 }
