--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,6 @@ description=Mine Little Pony turns players and mobs into ponies
 description_mlp=Mine Little Pony turns players and mobs into ponies. Press F9 ingame to access settings.
 description_hd=Separate skin server for Mine Little Pony that also supports HD skins. Access via button on the main menu.
 version=1.12.2.3b
-release=BETA
+release=SNAPSHOT
 minecraft_version=1.12.2
 mappings_version=stable_39
