--- a/build.gradle
+++ b/build.gradle
@@ -113,7 +113,9 @@ archivesBaseName = "mod-${project.name.toLowerCase()}"
 task copyBGPones(type: Copy) {
     delete "${buildDir}/skins/assets/minelittlepony/textures/entity/pony"
     
-    def permittedChars = /[^0-9a-z\",\{\}\[\]\(\):\'\.\/ ]/
+		// use the same rejex for both filenames and the bgponies.json
+		// Otherwise there could be errors because of the names in the json not matching the ones on disk
+    def permittedChars = /[^0-9a-z_-\",\t\{\}\[\]\(\):\'\.\/ ]/
     
     from("skins/Background Ponies") {
         exclude "bgponies.json"
@@ -129,8 +131,7 @@ task copyBGPones(type: Copy) {
         
         filter { line -> 
             line.toLowerCase()
-                .replaceAll('\t', '  ')
-                .replaceAll(permittedChars, '')
+                .replaceAll(permittedCharsJSON, '')
         }
     }
     
