--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,9 @@
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
 group=com.minelittlepony
-displayname=Mine Little Pony
-authors=Verdana, Rene_Z, Mumfrey, Killjoy1221, Sollace
-description=Mine Little Pony turns players and mobs into ponies
-description_mlp=Mine Little Pony turns players and mobs into ponies. Press F9 ingame to access settings.
-description_hd=Separate skin server for Mine Little Pony that also supports HD skins. Access via button on the main menu.
-version=1.12.2.3c
+displayname=HDSkins
+authors=Mumfrey, Killjoy1221, Sollace
+description=Separate skin server that also supports HD skins. Access via button on the main menu.
+version=5.0.0
 release=SNAPSHOT
-minecraft_version=1.13.2
+minecraft_version=1.12.2
 mappings_channel=snapshot
-mappings_version=20190324
+mappings_version=stable_39
