--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,6 @@ description=Separate skin server that also supports HD skins. Access via button 
 version=5.0.0
 release=SNAPSHOT
 minecraft_version=1.12.2
+forge_version=14.23.5.2768
 mappings_channel=snapshot
 mappings_version=stable_39
