--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,5 @@ authors=Mumfrey, Killjoy1221, Sollace
 description=Separate skin server that also supports HD skins. Access via button on the main menu.
 version=5.0.0
 release=SNAPSHOT
-minecraft_version=1.12.2
+minecraft_version=1.12.2-14.23.5.2768
 mappings_version=stable_39
